Limit compilation during tool resolution